# KAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN-job-system.md  DESIGN.md  Dockerfile  PLAN-harness-refactor.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
deploy/: README.md  noteweaver.service  setup-yum.sh  setup.sh
src/noteweaver/: __init__.py  agent.py  backlinks.py  cli.py  config.py  constants.py  frontmatter.py  gateway.py  job.py  plan.py  search.py  session.py  trace.py  vault.py
src/noteweaver/adapters/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  provider.py  retry.py  telegram_adapter.py
src/noteweaver/agent/: AGENTS.md  __init__.py  core.py  prompts.py
src/noteweaver/skills/: __init__.py  base.py  import_sources.py  organize_wiki.py
src/noteweaver/tools/: AGENTS.md  __init__.py  definitions.py  dispatch.py  handlers_read.py  handlers_write.py  legacy.py  policy.py  schemas.py
src/noteweaver/vault/: AGENTS.md  __init__.py  audit.py  context.py  core.py  git.py  indexing.py  organize.py  seeds.py
tests/: test_attended_policy.py  test_audit.py  test_backlinks.py  test_content_gates.py  test_context_management.py  test_fine_grained_tools.py  test_frontmatter.py  test_git.py  test_integration.py  test_job.py  test_organize_imports.py  test_plan.py  test_policy.py  test_promote_insight.py  test_prompt_engine.py  test_provider.py  test_retry_and_journal.py  test_search.py  test_session.py  test_skills.py  test_telegram_adapter.py  test_tools.py  test_trace.py  test_vault.py  test_workset.py
(+2 files in other folders)
