[project]
name = "noteweaver"
version = "0.1.0"
description = "AI-powered personal knowledge management agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "openai>=1.60.0",
    "httpx>=0.27.0",
    "readability-lxml>=0.8.1",
    "markdownify>=0.14.1",
    "rich>=13.9.0",
    "prompt-toolkit>=3.0.48",
    "pyyaml>=6.0.2",
    "gitpython>=3.1.43",
]

[project.scripts]
nw = "noteweaver.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noteweaver"]
